# Course_hh

./: README.md  main.py  pyproject.toml
Course_hh/: README.md  config.py  main.py  pyproject.toml
Course_hh/data/: vacancies.json
Course_hh/src/: hh.py  json_file.py  utils.py  vacancy.py
Course_hh/tests/: conftest.py  test_utils.py
data/: test.json  vacancies.json
src/: hh.py  json_file.py  utils.py  vacancy.py
tests/: conftest.py  test_hh.py  test_json_file.py  test_utils.py  test_vacancy.py
