[tool.poetry]
name = "course-hh"
version = "0.1.0"
description = ""
authors = ["Ekaterina <katyat1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
response = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"


[tool.poetry.group.link.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
